Fix text wrapping in profile-status.

--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -14,7 +14,6 @@ and open the template in the editor.
 }
 
 .statusDiv {
-    height: 34px;
     display: flex;
     flex-direction: column;
 }
